--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cdk-jump-box",
+  "name": "@time-loop/cdk-jump-box",
   "repository": {
     "type": "git",
-    "url": "https://github.com/andrew.george.hammond/cdk-jump-box.git"
+    "url": "https://github.com/time-loop/cdk-jump-box.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -31,8 +31,8 @@
     "projen": "npx projen"
   },
   "author": {
-    "name": "Andrew Hammond",
-    "email": "andrew.george.hammond@gmail.com",
+    "name": "ClickUp",
+    "email": "devops@clickup.com",
     "organization": true
   },
   "devDependencies": {
@@ -41,7 +41,9 @@
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.1.0",
+    "aws-cdk-lib": "2.20.0",
+    "cdk-ec2-key-pair": "3.2.0",
+    "cdk-iam-floyd": "0.300.0",
     "constructs": "10.0.5",
     "esbuild": "^0.14.34",
     "eslint": "^8",
@@ -58,6 +60,7 @@
     "jsii-pacmak": "^1.56.0",
     "jsii-release": "^0.2.316",
     "json-schema": "^0.4.0",
+    "multi-convention-namer": "0.1.11",
     "npm-check-updates": "^12",
     "prettier": "^2.6.2",
     "projen": "^0.54.11",
@@ -66,8 +69,17 @@
     "typescript": "^4.6.3"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
-    "constructs": "^10.0.5"
+    "aws-cdk-lib": "^2.20.0",
+    "cdk-ec2-key-pair": "^3.2.0",
+    "cdk-iam-floyd": "^0.300.0",
+    "constructs": "^10.0.5",
+    "multi-convention-namer": "^0.1.11"
+  },
+  "dependencies": {
+    "cdk-ec2-key-pair": "^3.2.0",
+    "cdk-iam-floyd": "^0.300.0",
+    "constructs": "^10.0.5",
+    "multi-convention-namer": "^0.1.11"
   },
   "keywords": [
     "cdk"
