try with questionable dev-deps

--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk-lib": "2.20.0",
-    "cdk-ec2-key-pair": "3.2.0",
-    "cdk-iam-floyd": "0.300.0",
-    "constructs": "10.0.5",
+    "cdk-ec2-key-pair": "^3.2.0",
+    "cdk-iam-floyd": "^0.300.0",
+    "constructs": "^10.0.5",
     "esbuild": "^0.14.34",
     "eslint": "^8",
     "eslint-config-prettier": "^8.5.0",
@@ -60,7 +60,7 @@
     "jsii-pacmak": "^1.56.0",
     "jsii-release": "^0.2.316",
     "json-schema": "^0.4.0",
-    "multi-convention-namer": "0.1.11",
+    "multi-convention-namer": "^0.1.11",
     "npm-check-updates": "^12",
     "prettier": "^2.6.2",
     "projen": "^0.54.11",
