--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -252,19 +252,19 @@
       },
       "steps": [
         {
-          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='aws-cdk-lib,cdk-ec2-key-pair,cdk-iam-floyd,constructs,multi-convention-namer,projen'"
+          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='aws-cdk-lib,projen'"
         },
         {
-          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='aws-cdk-lib,cdk-ec2-key-pair,cdk-iam-floyd,constructs,multi-convention-namer,projen'"
+          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='aws-cdk-lib,projen'"
         },
         {
-          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='aws-cdk-lib,cdk-ec2-key-pair,cdk-iam-floyd,constructs,multi-convention-namer,projen'"
+          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='aws-cdk-lib,projen'"
         },
         {
-          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='aws-cdk-lib,cdk-ec2-key-pair,cdk-iam-floyd,constructs,multi-convention-namer,projen'"
+          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='aws-cdk-lib,projen'"
         },
         {
-          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='aws-cdk-lib,cdk-ec2-key-pair,cdk-iam-floyd,constructs,multi-convention-namer,projen'"
+          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='aws-cdk-lib,projen'"
         },
         {
           "exec": "yarn install --check-files"
