--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cdk-jump-box",
+  "name": "@time-loop/cdk-jump-box",
   "repository": {
     "type": "git",
-    "url": "https://github.com/andrew.george.hammond/cdk-jump-box.git"
+    "url": "https://github.com/time-loop/cdk-jump-box.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -31,18 +31,20 @@
     "projen": "npx projen"
   },
   "author": {
-    "name": "Andrew Hammond",
-    "email": "andrew.george.hammond@gmail.com",
+    "name": "ClickUp",
+    "email": "devops@clickup.com",
     "organization": true
   },
   "devDependencies": {
-    "@time-loop/clickup-projen": "^0.0.29",
+    "@time-loop/clickup-projen": "^0.0.31",
     "@types/jest": "^27.4.1",
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.1.0",
-    "constructs": "10.0.5",
+    "aws-cdk-lib": "2.17.0",
+    "cdk-ec2-key-pair": "^3.2.0",
+    "cdk-iam-floyd": "^0.300.0",
+    "constructs": "^10.0.5",
     "esbuild": "^0.14.34",
     "eslint": "^8",
     "eslint-config-prettier": "^8.5.0",
@@ -54,10 +56,11 @@
     "jest-junit": "^13",
     "jsii": "^1.56.0",
     "jsii-diff": "^1.56.0",
-    "jsii-docgen": "^6.3.1",
+    "jsii-docgen": "^6.3.2",
     "jsii-pacmak": "^1.56.0",
     "jsii-release": "^0.2.316",
     "json-schema": "^0.4.0",
+    "multi-convention-namer": "^0.1.11",
     "npm-check-updates": "^12",
     "prettier": "^2.6.2",
     "projen": "^0.54.11",
@@ -66,8 +69,17 @@
     "typescript": "^4.6.3"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
-    "constructs": "^10.0.5"
+    "aws-cdk-lib": "^2.17.0",
+    "cdk-ec2-key-pair": "^3.2.0",
+    "cdk-iam-floyd": "^0.300.0",
+    "constructs": "^10.0.5",
+    "multi-convention-namer": "^0.1.11"
+  },
+  "dependencies": {
+    "cdk-ec2-key-pair": "^3.2.0",
+    "cdk-iam-floyd": "^0.300.0",
+    "constructs": "^10.0.5",
+    "multi-convention-namer": "^0.1.11"
   },
   "keywords": [
     "cdk"
