--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,7 @@
 /.projen/files.json linguist-generated
 /.projen/tasks.json linguist-generated
 /codecov.yml linguist-generated
+/LICENSE linguist-generated
 /package.json linguist-generated
 /tsconfig.dev.json linguist-generated
 /yarn.lock linguist-generated
