--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "node": ">= 14.17.0"
   },
   "main": "lib/index.js",
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
