--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -96,7 +96,7 @@
       "description": "Synthesize project files",
       "steps": [
         {
-          "exec": "node .projenrc.js"
+          "exec": "ts-node --project tsconfig.dev.json .projenrc.ts"
         }
       ]
     },
@@ -270,7 +270,7 @@
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade @time-loop/clickup-projen @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk-lib cdk-ec2-key-pair cdk-iam-floyd constructs esbuild eslint-config-prettier eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import eslint-plugin-prettier eslint jest jest-junit jsii jsii-diff jsii-docgen jsii-pacmak jsii-release json-schema multi-convention-namer npm-check-updates prettier standard-version ts-jest typescript aws-cdk-lib cdk-ec2-key-pair cdk-iam-floyd constructs multi-convention-namer cdk-ec2-key-pair cdk-iam-floyd constructs multi-convention-namer"
+          "exec": "yarn upgrade @time-loop/clickup-projen @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk-lib cdk-ec2-key-pair cdk-iam-floyd constructs esbuild eslint-config-prettier eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import eslint-plugin-prettier eslint jest jest-junit jsii jsii-diff jsii-docgen jsii-pacmak jsii-release json-schema multi-convention-namer npm-check-updates prettier standard-version ts-jest ts-node typescript aws-cdk-lib cdk-ec2-key-pair cdk-iam-floyd constructs multi-convention-namer cdk-ec2-key-pair cdk-iam-floyd constructs multi-convention-namer"
         },
         {
           "exec": "npx projen"
