--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "projen": "^0.54.11",
     "standard-version": "^9",
     "ts-jest": "^27.1.4",
+    "ts-node": "^9",
     "typescript": "^4.6.3"
   },
   "peerDependencies": {
