--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 !/.gitattributes
 !/.projen/tasks.json
 !/.projen/deps.json
+!/renovate.json5
 !/.projen/files.json
 !/.github/workflows/pull-request-lint.yml
 !/.github/workflows/auto-approve.yml
@@ -32,10 +33,10 @@ jspm_packages/
 .yarn-integrity
 .cache
 *.code-workspace
+/.npmrc
 .idea
 .yalc
 yalc.lock
-!/.projenrc.js
 /test-reports/
 junit.xml
 /coverage/
@@ -47,7 +48,6 @@ junit.xml
 !/.github/pull_request_template.md
 !/.prettierignore
 !/.prettierrc.json
-!/.npmrc
 !/test/
 !/tsconfig.dev.json
 !/src/
@@ -64,4 +64,4 @@ tsconfig.json
 !/.github/workflows/add-to-project.yml
 !/.github/workflows/update-projen-main.yml
 !/.github/workflows/add-to-update-projen-project.yml
-!/renovate.json5
+!/.projenrc.ts
