--- a/package.json
+++ b/package.json
@@ -35,38 +35,35 @@
     "organization": true
   },
   "devDependencies": {
-    "@time-loop/clickup-projen": "^0.0.166",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^14",
-    "@typescript-eslint/eslint-plugin": "^5",
-    "@typescript-eslint/parser": "^5",
+    "@time-loop/clickup-projen": "^1.3.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^18",
+    "@typescript-eslint/eslint-plugin": "^6",
+    "@typescript-eslint/parser": "^6",
     "aws-cdk-lib": "2.17.0",
     "cdk-ec2-key-pair": "^3.2.0",
     "cdk-iam-floyd": "^0.300.0",
-    "constructs": "^10.0.5",
     "esbuild": "^0.19.1",
     "eslint": "^8",
     "eslint-config-prettier": "^8.10.0",
-    "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
     "jest-junit": "^15",
-    "jsii": "5.0.*",
+    "jsii": "~5.3.0",
     "jsii-diff": "^1.87.0",
     "jsii-docgen": "^10.0.0",
     "jsii-pacmak": "^1.87.0",
     "jsii-release": "^0.2.737",
-    "jsii-rosetta": "5.0.*",
+    "jsii-rosetta": "~5.3.0",
     "multi-convention-namer": "^0.1.12",
-    "npm-check-updates": "^16",
     "prettier": "^2.8.8",
-    "projen": "^0.72.11",
+    "projen": "^0.78.5",
     "standard-version": "^9",
-    "ts-jest": "^27.1.5",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10",
-    "typescript": "^4.9.5"
+    "typescript": "~5.3.0"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.17.0",
@@ -85,7 +82,7 @@
     "cdk"
   ],
   "engines": {
-    "node": ">= 14.18.0"
+    "node": ">= 18.17.1"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
@@ -129,11 +126,13 @@
         }
       ]
     ],
-    "preset": "ts-jest",
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.dev.json"
-      }
+    "transform": {
+      "^.+\\.[t]sx?$": [
+        "ts-jest",
+        {
+          "tsconfig": "tsconfig.dev.json"
+        }
+      ]
     }
   },
   "types": "lib/index.d.ts",
