--- a/renovate.json5
+++ b/renovate.json5
@@ -19,6 +19,9 @@
       "matchPackagePatterns": [
         "*"
       ],
+      "excludePackagePatterns": [
+        "^@time-loop\\/clickup-projen"
+      ],
       "matchUpdateTypes": [
         "minor",
         "patch"
@@ -32,6 +35,12 @@
       "addLabels": [
         "optional"
       ]
+    },
+    {
+      "matchPackagePatterns": [
+        "^@time-loop\\/clickup-projen"
+      ],
+      "allowedVersions": "!/^[0-9]+\\.[0-9]+\\.[0-9]+(\\.[0-9]+)?-(alpha|beta).*$/"
     }
   ],
   "ignoreDeps": [
@@ -40,16 +49,16 @@
     "@typescript-eslint/parser",
     "cdk-ec2-key-pair",
     "cdk-iam-floyd",
-    "constructs",
     "eslint",
     "jest-junit",
     "jsii-rosetta",
     "jsii",
     "multi-convention-namer",
-    "npm-check-updates",
     "standard-version",
     "ts-node",
+    "typescript",
     "aws-cdk-lib",
+    "constructs",
     "node",
     "@time-loop/clickup-projen",
     "projen"
